--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "20.1.0",
     "aws-cdk": "2.79.1",
+    "prettier": "2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "~5.0.4"
   },
