Keep old web assets in S3 bucket
This should hopefully reduce number of 4xx errors on the CloudFront
distribution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,4 +87,4 @@ jobs:
           aws-region: eu-west-1
 
       - name: S3 Sync
-        run: aws s3 sync ./ui/dist s3://dc2023.hbt.ockenden.io --delete
+        run: aws s3 sync ./ui/dist s3://dc2023.hbt.ockenden.io
