--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/node": "20.1.0",
-    "aws-cdk": "2.79.1",
+    "@types/node": "^20.3.3",
+    "aws-cdk": "2.86.0",
     "prettier": "2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.4"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.79.1",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.86.0",
+    "constructs": "^10.2.68",
     "source-map-support": "^0.5.21"
   }
 }
